...
                    <view key="view" contentMode="scaleToFill" id="DOW-17-gcp">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello CodeMash!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtQ-z6-oa9">
                                <rect key="frame" x="73" y="73" width="229" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="greetingLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhy-OS-8vB">
                                <rect key="frame" x="50" y="164" width="275" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="greetingTextBox"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="275" id="AHW-Qe-Fx2"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PG3-21-8N0">
                                <rect key="frame" x="114" y="202" width="148" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Update Greeting"/>
                                <connections>
                                    <action selector="updateGreetingAction:" destination="jZY-HC-FXW" eventType="touchUpInside" id="uhC-J9-Qa3"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1x-Iv-UaT">
                                <rect key="frame" x="0.0" y="568" width="375" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 Rows" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6a-eh-twS">
                                        <rect key="frame" x="159.5" y="15" width="56" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numTableViewRowsLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="tableView"/>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATD-pK-l8d">
                                <rect key="frame" x="125.5" y="20" width="123" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="addRowButton"/>
                                <state key="normal" title="Add Row To Table"/>
                                <connections>
                                    <action selector="addRowAction:" destination="MK1-so-qAh" eventType="touchUpInside" id="8qi-Ku-KzG"/>
                                </connections>
                            </button>
                        </subviews>
...
                            <constraint firstItem="1Xn-Y2-BKa" firstAttribute="leading" secondItem="bQr-S0-u8j" secondAttribute="leading" id="Npo-Yw-cU3"/>
                            <constraint firstItem="U1x-Iv-UaT" firstAttribute="leading" secondItem="bQr-S0-u8j" secondAttribute="leading" id="XMv-q0-nTu"/>
                            <constraint firstItem="ATD-pK-l8d" firstAttribute="centerX" secondItem="bQr-S0-u8j" secondAttribute="centerX" id="skV-Bd-wd2"/>
                            <constraint firstAttribute="trailing" secondItem="1Xn-Y2-BKa" secondAttribute="trailing" id="z80-es-KTT"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Example 2" id="0KX-ea-umQ"/>
                    <connections>
                        <outlet property="numberOfRowsLabel" destination="V6a-eh-twS" id="bCO-PI-OyV"/>
                        <outlet property="tableView" destination="1Xn-Y2-BKa" id="gMd-X8-bgq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oqf-jb-Yax" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
